--- a/DocManagement/DocManagement.csproj
+++ b/DocManagement/DocManagement.csproj
@@ -81,6 +81,14 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>bin\Microsoft.Office.Interop.Word.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.6.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data.Entity, Version=6.6.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\MySql.Data.Entity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -103,9 +111,6 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Files\Copies\437d3df7-2ff9-4865-ba3e-ec409b3b33f9.doc" />
-    <Content Include="Files\Copies\70017325-4288-4de4-9cc7-c905c77b1b32.doc" />
-    <Content Include="Files\Copies\f81af7e8-f3c6-4165-a049-56a1a6d2deb7.doc" />
     <Content Include="Files\Output\output.doc" />
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <Content Include="Files\OriginalDoc\CartaPremio1.docx" />
@@ -119,17 +124,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bin\Microsoft.AI.Agent.Intercept.dll" />
-    <Content Include="bin\Microsoft.AI.DependencyCollector.dll" />
-    <Content Include="bin\Microsoft.AI.PerfCounterCollector.dll" />
-    <Content Include="bin\Microsoft.AI.ServerTelemetryChannel.dll" />
-    <Content Include="bin\Microsoft.AI.Web.dll" />
-    <Content Include="bin\Microsoft.AI.WindowsServer.dll" />
-    <Content Include="bin\Microsoft.ApplicationInsights.dll" />
-    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
-    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
     <Content Include="Plantilla.aspx" />
-    <Content Include="Pruebas.aspx" />
+    <Content Include="Plantilla3.aspx" />
+    <Content Include="Plantilla2.aspx" />
+    <Content Include="Plantilla1.aspx" />
     <Content Include="scripts\ai.0.22.19-build00125.js" />
     <Content Include="scripts\ai.0.22.19-build00125.min.js" />
     <Content Include="Web.config" />
@@ -147,16 +145,32 @@
     <Compile Include="Plantilla.aspx.designer.cs">
       <DependentUpon>Plantilla.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Pruebas.aspx.cs">
-      <DependentUpon>Pruebas.aspx</DependentUpon>
+    <Compile Include="Plantilla3.aspx.cs">
+      <DependentUpon>Plantilla3.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Pruebas.aspx.designer.cs">
-      <DependentUpon>Pruebas.aspx</DependentUpon>
+    <Compile Include="Plantilla3.aspx.designer.cs">
+      <DependentUpon>Plantilla3.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Plantilla2.aspx.cs">
+      <DependentUpon>Plantilla2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Plantilla2.aspx.designer.cs">
+      <DependentUpon>Plantilla2.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Plantilla1.aspx.cs">
+      <DependentUpon>Plantilla1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Plantilla1.aspx.designer.cs">
+      <DependentUpon>Plantilla1.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="bin\" />
+    <Folder Include="Files\Copies\" />
     <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <PropertyGroup>
