Agregando las funciones para subir la data de la base de datos

--- a/DocManagement/Web.config
+++ b/DocManagement/Web.config
@@ -4,6 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="cnnSql" connectionString="Server=192.168.5.5;Database=seguro;User Id=sa;Password=PromoAdmin12;" />
+    <add name="cnnMysql" connectionString="Server=localhost;Database=catalogo;Uid=cotizador;Pwd=12345;" />
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
