--- a/LlamadaParaPruebas/App.config
+++ b/LlamadaParaPruebas/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <connectionStrings>
+    <add name="cnnSql" connectionString="Server=192.168.5.5;Database=seguro;User Id=sa;Password=PromoAdmin12;" />
+  </connectionStrings>
+  
 </configuration>
